@templates/init-namespace/templates/networkpolicy-cattle-monitoring-system.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-cattle-monitoring-system
spec:
  policyTypes:
    - Ingress
  podSelector: {}
  ingress:
    - from:
      # Allow from all pods from cattle-monitoring-system
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: cattle-monitoring-system
        podSelector: {}
